--- a/портфолио/111111111114231/style.css
+++ b/портфолио/111111111114231/style.css
@@ -1,611 +1,402 @@
-/* Google Font CDN Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  scroll-behavior: smooth;
-}
-
-/* Custom Scroll Bar CSS */
-::-webkit-scrollbar {
-    width: 10px;
-}
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-::-webkit-scrollbar-thumb {
-    background: #6e93f7;
-    border-radius: 12px;
-    transition: all 0.3s ease;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #4070f4;
-}
-/* navbar styling */
-nav{
-  position: fixed;
-  width: 100%;
-  padding: 20px 0;
-  z-index: 998;
-  transition: all 0.3s ease;
-  font-family: 'Ubuntu', sans-serif;
-}
-nav.sticky{
-  background: #4070f4;
-  padding: 13px 0;
-}
-nav .navbar{
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: auto;
-}
-nav .navbar .logo a{
-  font-weight: 500;
-  font-size: 35px;
-  color: #4070f4;
-}
-nav.sticky .navbar .logo a{
-  color: #fff;
-}
-nav .navbar .menu{
-  display: flex;
-  position: relative;
-}
-nav .navbar .menu li{
-  list-style: none;
-  margin: 0 20px;
-}
-.navbar .menu a{
-  font-size: 18px;
-  font-weight: 500;
-  color: #0E2431;
-  padding: 6px 0;
-  transition: all 0.4s ease;
-}
-.navbar .menu a:hover{
-  color: #4070f4;
-}
-nav.sticky .menu a{
-  color: #FFF;
-}
-nav.sticky .menu a:hover{
-  color: #0E2431;
-}
-.navbar .media-icons a{
-  color: #4070f4;
-  font-size: 18px;
-  margin: 0 6px;
-}
-nav.sticky .media-icons a{
-  color: #FFF;
-}
-
-/* Side Navigation Menu Button CSS */
-nav .menu-btn,
-.navbar .menu .cancel-btn{
-  position: absolute;
-  color: #fff;
-  right: 30px;
-  top: 20px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  display: none;
-}
-nav .menu-btn{
-  color: #4070f4;
-}
-nav.sticky .menu-btn{
-  color: #FFF;
-}
-.navbar .menu .menu-btn{
-  color: #fff;
-}
-
-/* home section styling */
-.home{
-  height: 100vh;
-  width: 100%;
-  background: url("images/background.png") no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  font-family: 'Ubuntu', sans-serif;
-}
-.home .home-content{
-  width: 90%;
-  height: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.photo{
-    right: 8%;
-    position: absolute;
-    width: 65%;
-}
-.hr-dashed-gradient {
-	margin: 20px 0;
-	padding: 0;
-	height: 2px;
-	border: none;
-	background: linear-gradient(to right, transparent 50%, #fff 50%), 
-				linear-gradient(to right, blue, red);
-	background-size: 16px 2px, 100% 2px;
-}
-.home .text-one{
-  font-size: 25px;
-  color: #0E2431;
-}
-.home .text-two{
-  color: #0E2431;
-  font-size: 75px;
-  font-weight: 600;
-  margin-left: -3px;
-}
-.home .text-three{
-  font-size: 40px;
-  margin: 5px 0;
-  color: #4070f4;
-}
-.home .text-four{
-  font-size: 23px;
-  margin: 5px 0;
-  color: #0E2431;
-}
-.home .button{
-  margin: 14px 0;
-}
-.home .button button{
-  outline: none;
-  padding: 8px 16px;
-  border-radius: 6px;
-  font-size: 25px;
-  font-weight: 400;
-  background: #4070f4;
-  color: #fff;
-  cursor: pointer;
-  border: 2px solid transparent;
-  transition: all 0.4s ease;
-}
-.home .button button:hover{
-  border-color: #4070f4;
-  background-color: #fff;
-  color: #4070f4;
-}
-
-/* About Section Styling */
-/* Those Elements Where We Have Apply Same CSS,
- I'm Selecting Directly 'Section Tag' and 'Class'  */
-section{
-  padding-top: 40px;
-}
-section .content{
-  width: 80%;
-  margin: 40px auto;
-  font-family: 'Poppins', sans-serif;
-}
-.about .about-details{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-section .title{
-  display: flex;
-  justify-content: center;
-  margin-bottom: 90px;
-}
-section .title span{
-  color: #0E2431;
-  font-size: 30px;
-  font-weight: 600;
-  position: relative;
-  padding-bottom: 8px;
-}
-section .title span::before,
-section .title span::after{
-  content: '';
-  position: absolute;
-  height: 3px;
-  width: 100%;
-  background: #4070f4;
-  left: 0;
-  bottom: 0;
-}
-section .title span::after{
-  bottom: -7px;
-  width: 70%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.about .about-details .left{
-  width: 45%;
-  padding-bottom: 100px;
-}
-.about .left img{
-  width: 400px;
-  object-fit: cover;
-  border-radius: 12px;
-}
-.about-details .right{
-  width: 90%;
-  position: relative;
-  top: -40px;
-}
-section  .topic{
-  color: #0E2431;
-  font-size: 25px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-.about-details .right p{
-  text-align: justify;
-  color: #0E2431;
-}
-section .button{
-  margin: 16px 0;
-}
-section .button button{
-  outline: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  font-size: 25px;
-  font-weight: 400;
-  background: #4070f4;
-  color: #fff;
-  border: 2px solid transparent;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-section .button button:hover{
-  border-color: #4070f4;
-  background-color: #fff;
-  color: #4070f4;
-}
-
- /* My Skills CSS */
- .skills{
-   background: #F0F8FF;
- }
- .skills .content{
-   padding: 40px 0;
- }
- .skills .skills-details{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
- }
- .skills-details .text{
-   width: 50%;
- }
- .skills-details p{
-   color: #0E2431;
-   text-align: justify;
- }
-.skills .skills-details .experience{
-  display: flex;
-  align-items: center;
-  margin: 0 10px;
-}
-.skills-details .experience .num{
-  color: #0E2431;
-  font-size: 80px;
-}
-.skills-details .experience .exp{
-  color: #0E2431;
-  margin-left: 20px;
-  font-size: 18px;
-  font-weight: 500;
-  
-}
-.skills-details .boxes{
-  width: 45%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.skills-details .box{
-  width: calc(100% / 2 - 20px);
-  margin: 20px 0;
-}
-.skills-details .boxes .topic{
-  font-size: 20px;
-  color: #4070f4;
-}
-.skills-details .boxes .per{
-  font-size: 60px;
-  color: #4070f4;
-}
-
-/* My Services CSS */
-.services .boxes{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.services .boxes .box{
-  margin: 20px 0;
-  width: calc(100% / 3 - 20px);
-  text-align: center;
-  border-radius: 12px;
-  padding: 30px 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
-  cursor: default;
-  transition: all 0.4s ease;
-}
-.services .boxes .box:hover{
-  background: #4070f4;
-  color: #fff;
-}
-.services .boxes .box .icon{
-  height: 50px;
-  width: 50px;
-  background: #4070f4;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 50px;
-  font-size: 18px;
-  color: #fff;
-  margin: 0 auto 10px auto;
-  transition: all 0.4s ease;
-}
-.boxes .box:hover .icon{
-  background-color: #fff;
-  color: #4070f4;
-}
-.services .boxes .box:hover .topic,
-.services .boxes .box:hover p{
-  color: #0E2431;
-  transition: all 0.4s ease;
-}
-.services .boxes .box:hover .topic,
-.services .boxes .box:hover p{
-  color: #fff;
-}
-/* Contact Me CSS */
-.contact{
-  background: #F0F8FF;
-}
-.contact .content{
-  margin: 0 auto;
-  padding: 30px 0;
-}
-.contact .text{
-  width: 80%;
-  text-align: center;
-  margin: auto;
-}
-
-/* Footer CSS */
-footer{
-  background: #4070f4;
-  padding: 15px 0;
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-}
-footer .text span{
-  font-size: 17px;
-  font-weight: 400;
-  color: #fff;
-}
-footer .text span a{
-  font-weight: 500;
-  color: #FFF;
-}
-footer .text span a:hover{
-  text-decoration: underline;
-}
-/* Scroll TO Top Button CSS */
-.scroll-button a{
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 40px;
-  height: 40px;
-  color: #fff;
-  background: #4070f4;
-  font-size: 18px;
-  border-radius: 688px;
-  box-shadow: rgba(0, 0, 0, 0.15);
-  display: none;
-}
-
-/* Responsive Media Query */
-@media (max-width: 1190px) {
-  section .content{
-    width: 85%;
+* {
+    box-sizing: border-box;
   }
-}
-@media (max-width: 1000px) {
-  .about .about-details{
-    justify-content: center;
-    flex-direction: column;
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
   }
-  .about .about-details .left{
+  .navbar-container {
+    position: fixed;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
     display: flex;
     justify-content: center;
+    text-align: center;
+  }
+  .navigation {
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
-  }
-  .about-details .right{
-    width: 90%;
-    margin: 40px 0;
-  }
-  .services .boxes .box{
-    margin: 20px 0;
-    width: calc(100% / 2 - 20px);
-  }
-}
-@media (max-width: 900px) {
-  .about .left img{
-    height: 350px;
-    width: 350px;
-  }
-}
+    left: 300px;
 
-@media (max-width: 750px) {
-  nav .navbar{
-    width: 90%;
   }
-  nav .navbar .menu{
-    position: fixed;
-    left: -100%;
-    top: 0;
-    background: #0E2431;
-    height: 100vh;
-    max-width: 400px;
-    width: 100%;
-    padding-top: 60px;
-    flex-direction: column;
+  .nav-list {
+    display: flex;
     align-items: center;
-    transition: all 0.5s ease;
+    list-style: none;
+    padding: 0;
+
   }
-  .navbar.active .menu{
-    left: 0;
+  .nav-link {
+    text-decoration: none;
+    color: #bf7506;
+    margin-left: 24px;
   }
-  nav .navbar .menu a{
-    font-size: 23px;
-    display: block;
-    color: #fff;
-    margin: 10px 0;
+  .nav-link.active {
+    font-weight: 700;
   }
-  nav.sticky .menu a:hover{
-    color: #4070f4;
+  .container {
+    max-width: 870px;
+    width: 100%;
+    margin: auto;
   }
-  nav .navbar .media-icons{
+  body {
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    line-height: 150%;
+  
+  }
+  .header {
+    padding: 70px 0;
+    display: flex;
+    align-items: center;
+  }
+  .header-text {
+    margin-left: 27px;
+  }
+  .header-strong {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;
+  }
+  .header-heading {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    /* or 32px */
+    letter-spacing: -0.02em;
+    margin-top: 8px;
+    margin-bottom: 24px;
+  }
+  .header-primary {
+    color: #bf7506;
+  }
+  .social-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+  }
+  .social-link {
+    display: inline-block;
+    padding: 8px;
+  }
+  .header-links {
+    display: flex;
+    align-items: center;
+  }
+  .cv-download {
+    padding: 7px 8px;
+    margin-left: 55px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+    border-bottom: 2px solid #bf7506;
+  }
+  .cv-icon {
+    margin-right: 4px;
+  }
+  .section-heading {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;  
+    letter-spacing: -0.03em;
+    color: #BF7506;
+  }
+  
+  
+
+
+
+  .card {
+    max-width: 400px;
+    margin-bottom: 40px;
+  }
+  .card-text-wrapper {
+    padding: 16px;
+  }
+  .card-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    color: #BF7506;
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
+  .card-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+  }
+  .tags {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    align-items: center;  
+    margin-top: 8px;
+    margin-bottom: 16px;
+  }
+  .tag {
+    padding: 4px 8px;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    text-decoration: none;
+    color: #211B12;
+    background: #FFFFFF;
+    border: 1px solid #DD9C3C;
+    border-radius: 4px;
+    margin-right: 4px;
+  }
+  .card-buttons {
+    display: flex;
+    align-items: center;
+  }
+  .card-button {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;  
+    border-bottom: 2px solid #BF7506; 
+    margin-right: 25px;
+  }
+  .card-button-icon {
+    margin-right: 4px;
+  }
+  .cards {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .card-image {
+    max-width: 100%;
+  }
+
+
+
+
+  .developer {
+    padding: 80px 0 20px;
+    display: flex;
+    align-items: center;
+  }
+  .developer-photo {
+    width: 360px;
+    height: 440px;
+    flex-shrink: 0;
+    object-fit: cover;
+    border-radius: 20px;
+  }
+  .developer-about {
+    margin-left: 55px;
+  }
+  .developer-hello {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    color: #211B12;
+  }
+  .developer-title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 125%;
+    letter-spacing: -0.03em;
+    color: #bf7506;
+    margin-top: 4px;
+    margin-bottom: 16px;
+    width: 500px;
+  }
+  .developer-text {
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+  }
+  .motto {
+    font-size: 24px;
+    line-height: 150%;
+    color: #DD9C3C;
+    margin: 16px 0;
+  }
+  .developer-sign {
+    max-width: 200px;
+  }
+  
+
+  
+
+
+  .skills {
+    padding: 20px 0;
+  }
+  .skills-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    color: #211B12;
+  }
+
+
+
+
+
+  .feedback {
+    position: relative;
+    padding: 80px 0 160px;
+  }
+  .feedback-hand {
+    position: absolute;
+    right: 0;
+    top: 20%;
+    width: 25%;
+  }
+  .input-group {
+    position: relative;
+    margin-bottom: 24px;
+  }
+  .input-label {
+    position: absolute;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #83807c;
+    padding: 0 8px;
+    background: #FFFFFF;
+    top: 0;
+    left: 16px;
+  }
+  .input-group {
+    padding-top: 9px;
+  }
+  .input {
+    border: 3px solid #e0dedc;
+    border-radius: 4px;
+    width: 435px;
+    height: 56px;
+  }
+  .textarea {
+    min-height: 140px;
+  }
+  .form-container {
+    max-width: 435px;
+    margin: auto;
+  }
+  .submit-button {
+    padding: 7px 8px;
+    margin-left: 55px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+    border: none;
+    border-bottom: 2px solid #bf7506;
+    background-color: #FFFFFF;
+    cursor: pointer;  
+  }
+  .button-group {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+
+
+
+  @media (max-width  : 1024px) {
+    .container {
+      max-width: 760px;
+    }
+    .card {
+      max-width: 350px;
+    }
+  }
+  @media (max-width: 790px) {
+    .container {
+      max-width: 576px;
+    }
+    .header-photo {
+      max-width: 150%;
+      font-size: 36px;
+    }
+    .header-heading {
+      font-size: 18px;
+    }
+    .cv-download {
+      margin-left: 15px;
+    }
+    .card {
+      max-width: 45%;
+    }
+    .card-text-wrapper {
+      padding: 8px 0;
+    }
+    .developer {
+      flex-direction: column;
+    }
+  }
+  
+
+
+  .btn-up {
+    /* фиксированное позиционирование */
+    position: fixed;
+    /* цвет фона */
+    background-color: #BF7506;
+    /* расстояние от правого края окна браузера */
+    left: 20px;
+    /* расстояние от нижнего края окна браузера */
+    bottom: 0;
+    /* скругление верхнего левого угла */
+    border-top-left-radius: 8px;
+    /* скругление верхнего правого угла */
+    border-top-right-radius: 8px;
+    /* вид курсора */
+    cursor: pointer;
+    /* отображение элемента как flex */
+    display: flex;
+    /* выравниваем элементы внутри элемента по центру вдоль поперечной оси */
+    align-items: center;
+    /* выравниваем элементы внутри элемента по центру вдоль главной оси */
+    justify-content: center;
+    /* ширина элемента */
+    width: 60px;
+    /* высота элемента */
+    height: 50px;
+    z-index: 999999999999999999999;
+  }
+  
+  .btn-up::before {
+    content: "";
+    width: 40px;
+    height: 40px;
+    background: transparent no-repeat center center;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z'/%3E%3C/svg%3E");
+  }
+  
+  .btn-up_hide {
     display: none;
   }
-  nav .menu-btn,
-  .navbar .menu .cancel-btn{
-    display: block;
-  }
-  .home .text-two{
-    font-size: 65px;
-  }
-  .home .text-three{
-    font-size: 35px;
-  }
-  .skills .skills-details{
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .skills-details .text{
-    width: 100%;
-    margin-bottom: 50px;
-  }
-  .skills-details .boxes{
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-  .services .boxes .box{
-    margin: 20px 0;
-    width: 100%;
-  }
-  .contact .text{
-    width: 100%;
-}
-}
-
-@media (max-width: 500px){
-  .home .text-two{
-    font-size: 55px;
-  }
-  .home .text-three{
-    font-size: 33px;
-  }
-  .skills-details .boxes .per{
-    font-size: 50px;
-    color: #4070f4;
-  }
-}
-
-
-.row {
-  position: relative;
-  margin: auto;
-  padding-top: 10px;
-  text-align: center;
-  justify-content: center;
-}
-.btn {
-  align-items: center;
   
-  border: 1px solid #cdd2d6;
-  box-sizing: border-box;
-  color: #000000;
-  display: flex;
-  height: 45px;
-  letter-spacing: 2px;
-  padding: 0.8em 1em;
-  transition: all 0.3s ease;
-}
-.btn:hover {
-  background-color: #4070f4;
-  border-color: #05a8ff;
-  color: #ffffff;
-}
-.tooltip {
-  position: relative;
-  overflow: hidden;
-}
-.tooltip:hover {
-  overflow: visible;
-}
-.tooltip:hover .tooltip-content {
-  opacity: 1;
-}
-.tooltip .tooltip-content {
-  background: #4070f4;
-  box-shadow: 0 5px 25px 5px rgba(205, 210, 214, 0.8);
-  box-sizing: border-box;
-  color: #ffffff;
-  font-size: 15px;
-  line-height: 1.2;
-  letter-spacing: 1px;
-  max-width: 200px;
-  min-width: 145px;
-  padding: 1em;
-  position: absolute;
-  opacity: 0;
-  transition: all 0.3s ease;
-  font-family: 'Ubuntu', sans-serif;
-  
-  font-weight: 500;
-}
-.tooltip-text {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  margin: auto;
-}
-.tooltip .tooltip-content::after {
-  background: #4070f4;
-  content: "";
-  height: 10px;
-  position: absolute;
-  transform: rotate(45deg);
-  width: 10px;
-}
-.tooltip.right .tooltip-content {
-  left: calc(100% + 1.5em);
-  top: 50%;
-  transform: translateY(-50%);
-}
-.tooltip.right .tooltip-content::after {
-  left: -5px;
-  margin-top: -5px;
-  top: 50%;
-}
-.menuroad {
-  position: fixed;
-  top: 75%;
-  left: 1%;
-  margin-top: 5px;
-}
+  @media (hover: hover) and (pointer: fine) {
+    .btn-up:hover {
+      background-color: #ffee00; /* цвет заднего фона при наведении */
+    }
+  }
